prometheus/auth.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  namespace: cattle-monitoring-system
  name: prom-auth-middleware
spec:
  basicAuth:
    secret: prom-basic-auth
