prometheus/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: cattle-monitoring-system
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: cattle-monitoring-system-prom-auth-middleware@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: prometheus-ui
spec:
  tls:
    - hosts:
        - prometheus.lab.lcarilla.de
      secretName: prometheus-ui-cert
  rules:
    - host: "prometheus.lab.lcarilla.de"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: rancher-monitoring-prometheus
                port:
                  number: 9090
